--- a/styles/style.css
+++ b/styles/style.css
@@ -70,10 +70,10 @@ main{
 /* About Section Style */
 
 .about{
-    margin-top: 130px;
+    margin-top: 100px;
     background: #FFF8F3;
     border-radius: 10px;
-    padding: 130px 150px;
+    padding: 100px 150px;
 }
 .section-title{
     text-align: center;
@@ -118,4 +118,39 @@ tr td th{
     font-size: 20px;
     color: #474747;
     font-weight: 600;
+}
+
+/* What I Do Section Style */
+
+.what-i-do{
+    margin-top: 60px;
+}
+.what-i-do-description{
+    text-align: center;
+    margin-bottom: 50px;
+}
+.skills{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 40px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill-title{
+    margin-top: 30px;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px
+}
+
+/* Resume Section */
+
+.resume-section{
+    text-align: center;
+    font-weight: 600;
+    font-size: 30px;
+    margin-top: 60px;
 }
