--- a/styles/style.css
+++ b/styles/style.css
@@ -152,7 +152,13 @@ tr td th{
     text-align: center;
     font-weight: 600;
     font-size: 30px;
-    margin-top: 60px;
+    margin-top: 100px;
+    margin-bottom: 40px;
+}
+.resume-title-text{
+    font-weight: 700;
+    font-size: 30px;
+    margin-top: 30px;
 }
 .resume-content{ 
     display: flex;
@@ -175,4 +181,8 @@ tr td th{
 }
 .resume .description{
     color: #757575;
+}
+.resume-button{
+    text-align: center;
+    margin-top: 50px;
 }
