--- a/styles/style.css
+++ b/styles/style.css
@@ -185,4 +185,29 @@ tr td th{
 .resume-button{
     text-align: center;
     margin-top: 50px;
+    margin-bottom: 80px;
+}
+
+/* Footer Section */
+
+.contact .section-title{
+    text-align: left;
+}
+.contact{
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    padding: 130px 200px;
+}
+.contact input[type=text], input[type=email], textarea{
+    margin-bottom: 20px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+.section-title{
+    margin-bottom: 10px;
+}
+.contact a{
+    text-decoration: none;
 }
