--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@
 nav{
     display: flex;
     justify-content: space-between;
-    margin: 50px 150px;
+    padding: 50px 150px;
 }
 .nav-title{
     font-weight: 600;
