--- a/styles/style.css
+++ b/styles/style.css
@@ -223,6 +223,32 @@ hr {
 .skills-container, .resume-content{
         flex-direction: column;
     }
+    .about-info-container{
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+        padding-bottom: 40px;
+    }
+    .what-i-do-description{
+        padding: 0 20px;
+    }
+    .section-description{
+        padding: 0 25px;
+    }
+    .section-title{
+        padding-top: 40px;
+    }
+    .about{
+        padding: 0 10px;
+    }
+    .resume .title{
+        font-size: 21px;
+    }
+    .resume-title{
+        font-size: 34px;
+        margin-top: 73px;
+        margin-bottom: 23px;
+    }
 }
 
 /* @media screen and (min-width: 576px) and (max-width: 992px) {
@@ -230,3 +256,7 @@ hr {
             grid-template-columns: repeat(2, 1fr);
         }
     } */
+
+.hide{
+    display: none;
+}
